# chess-diagram

./: Cargo.toml  README.md
chess-diagram/: Cargo.toml
chess-diagram/assets/: pieces.xcf
chess-diagram/src/: app.rs  board.rs  config.rs  game.rs  gesture.rs  layout.rs  lib.rs_  main.rs  menu.rs  promotion.rs  proxy.rs  side.rs  sources.rs  variation.rs
eco/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  uci.rs
utils/src/: lib.rs  oddity.rs
